tests/src/errors/mod.rs
mod infinite_recursion;
mod terminal_not_defined;
mod unexisting_symbol;
mod infinite_recursion;
